--- a/src/app/assets/static/search.html
+++ b/src/app/assets/static/search.html
@@ -112,6 +112,8 @@
         if (window.location.hostname == "stock.weku.io")
             cx = '001148290739578050121:zqstfgknc0q';
    
+        if (window.location.hostname == "main.weku.io")
+            cx = '001148290739578050121:yzug2juylhu';
         
         var gcse = document.createElement('script');
         gcse.type = 'text/javascript';
